# crud_solados_app

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  constants.ts  styles.ts  types.ts
src-tauri/: .env  .gitignore  .taurignore  Cargo.toml  storage.sqlite  storage.sqlite-wal  tauri.conf.json
src-tauri/migrations/: 20230320234121_create_project_tables.sql  20230321004705_create_project_tables.sql
src-tauri/src/: main.rs  models.rs
src-tauri/src/commands/: mod.rs  order.rs  sole.rs  stock.rs
src-tauri/src/models/: order.rs  sole.rs  stock.rs
src/components/CofirmationModal/: CofirmationModal.styles.ts  index.tsx
src/components/ContainerItens/: index.ts
src/components/InputNumberSole/: index.ts
src/components/RegisterSoleModal/: index.tsx
src/components/Sole/: Sole.styles.ts  index.tsx
src/components/Sole/components/RegisterOrderModal/: RegisterOrderModal.styles.ts  index.tsx
src/utils/: pdfUtils.ts  vfs_fonts.ts
